# OverWrite

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
docs/: ANDROID.md  ARCHITECTURE.md  GUI.md  PLATFORMS.md  PROFILES.md  README.md
gui/: overwrite_gui.py
include/: android.h  chacha20.h  common.h  devlist.h  format.h  free_space.h  hidden_area.h  partition.h  platform.h  progress.h  rng.h  safety.h  secure_erase_linux.h  slack.h  target.h  wipe.h
scripts/: overwrite-gui.ps1  overwrite-gui.sh  test_linux_loop.sh
src/: android.c  chacha20.c  common.c  devlist.c  format.c  free_space.c  hidden_area.c  main.c  partition.c  platform_linux.c  platform_win.c  progress.c  rng.c  safety.c  secure_erase_linux.c  slack.c  target.c  wipe.c
